--- a/src/Styles/CardCrypto.css
+++ b/src/Styles/CardCrypto.css
@@ -6,7 +6,7 @@ input {
     width: 19vw;
     height: 5vh;
     position: relative;
-    padding-left: 18px;
+    padding-left: 32px;
 }
 
 .search img {
@@ -20,8 +20,8 @@ input {
 
 .nameCrypto {
     position: absolute;
-    top: 130px;
-    right: 450px;
+    top: 17vh;
+    right: 30vw;
     border-radius: 30px;
     background-color: #C1EE0A;
     color: black;
@@ -31,8 +31,8 @@ input {
 
 .priceCrypto {
     position: absolute;
-    top: 140px;
-    right: 450px;
+    top: 17vh;
+    right: 30vw;
 }
 
 .nameCrypto h1 {
@@ -165,6 +165,10 @@ input {
         width: 60vw;
     }
 
+    .crypto {
+        margin-top: 21px;
+    }
+
     .containerCards {
         margin-left: 20px;
         width: 90vw;
@@ -173,7 +177,7 @@ input {
     }
 
     input {
-        width: 22vw;
+        width: 21vw;
         font-size: 10px;
     }
 
@@ -193,13 +197,21 @@ input {
     }
 
     .nameCrypto {
-        top: 250px;
-        right: 300px;
-        font-size: 10px;
+        top: 30vh;
+        right: 42vw;
+    }
+
+    .nameCrypto h1 {
+        margin: 3px;
+        font-size: 20px !important;
+    }
+
+    .priceCrypto p{
+        font-size: 20px !important;
     }
 
     .priceCrypto {
-        top: 250px;
-        right: 300px;
+        top: 32vh;
+        right: 43vw;
     }
 }
